crates/rome_formatter/tests/specs/prettier/typescript/decorators/inline-decorators.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: inline-decorators.ts

---
# Input
```js

@d1
@d2(foo)
@d3.bar
@d4.baz()
class Class1 {}

class Class2 {
    @d1
    @d2(foo)
    @d3.bar
    @d4.baz()
    method1() {}

    @d1
    method2() {}

    @d2(foo)
    method3() {}

    @d3.bar
    method4() {}
}

class Class3 {
    @d1 fieldA;
    @d2(foo) fieldB;
    @d3.bar fieldC;
    @d4.baz() fieldD;

    constructor (
        @d1 private x: number,
        @d2(foo) private y: number,
        @d3('foo') private z: number,
        @d4({
            x: string
        }) private a: string,
    ) {}
}

@decorated class Foo {}

class Bar {
    @decorated method() {}
}

class MyContainerComponent {
  @ContentChildren(MyComponent) components: QueryListSomeBigName<MyComponentThat>;
}

```

# Output
```js
@d1
@d2(foo)
@d3.bar
@d4.baz()
class Class1 {}

class Class2 {
  @d1
  @d2(foo)
  @d3.bar
  @d4.baz()
  method1() {}

  @d1
  method2() {}

  @d2(foo)
  method3() {}

  @d3.bar
  method4() {}
}

class Class3 {
    @d1 fieldA;
    @d2(foo) fieldB;
    @d3.bar fieldC;
    @d4.baz() fieldD;

    constructor (
        @d1 private x: number,
        @d2(foo) private y: number,
        @d3('foo') private z: number,
        @d4({
            x: string
        }) private a: string,
    ) {}
}

@decorated
class Foo {}

class Bar {
  @decorated
  method() {}
}

class MyContainerComponent {
  @ContentChildren(MyComponent)
  components: QueryListSomeBigName<MyComponentThat>;
}

```

# Errors
```
error[SyntaxError]: expected a parameter but instead found '@'
   ┌─ inline-decorators.ts:32:9
   │
32 │         @d1 private x: number,
   │         ^ Expected a parameter here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found ','
   ┌─ inline-decorators.ts:32:30
   │
32 │         @d1 private x: number,
   │                              ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon to end the class property, but found none
   ┌─ inline-decorators.ts:33:9
   │
33 │         @d2(foo) private y: number,
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found ','
   ┌─ inline-decorators.ts:33:35
   │
33 │         @d2(foo) private y: number,
   │                                   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon to end the class property, but found none
   ┌─ inline-decorators.ts:34:9
   │
34 │         @d3('foo') private z: number,
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found ','
   ┌─ inline-decorators.ts:34:37
   │
34 │         @d3('foo') private z: number,
   │                                     ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon to end the class property, but found none
   ┌─ inline-decorators.ts:35:9
   │  
35 │ ┌         @d4({
36 │ │             x: string
37 │ │         }) private a: string,
   │ └────────────────────────────^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found ','
   ┌─ inline-decorators.ts:37:29
   │
37 │         }) private a: string,
   │                             ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ inline-decorators.ts:39:1
   │
39 │ }
   │ ^ Expected a statement here


```


